--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -5,6 +5,13 @@ template:
   name: "DYML - $env Script Sandboxing: General"
 
   description: "DYML - $env Script Sandboxing: General"
+
+  $configuration:
+    #EVALUATION_DEPTH: 10
+    #EVALUATE_TIMESTAMP_SERVERSIDE: true
+    BASIC_WARNINGS: false
+    #EXPRESSION_MAXLENGTH: 200
+
   required:
     - build
     - frontend-repo
