--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -201,7 +201,7 @@ services:
               $text: pipeline.yml
             env:
               REPO: frontend-repo
-              USERNAME: '{{form.pipeline.parameters.username}}'
+              USERNAME: '{{form.pipeline.parameters.username5}}'
               PASSWORD: '{{form.pipeline.parameters.password}}'
               API_KEY: '{{form.pipeline.parameters.api-key}}'
               SPACE: '{{form.pipeline.parameters.space}}'
